--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.a2grahj29.gyrogame" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.a2grahj29.gyrogame">
 
     <application
         android:allowBackup="true"
@@ -14,6 +15,9 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <service android:enabled="true" android:name="com.package.name.BackgroundSoundService"
+                tools:ignore="WrongManifestParent" />
         </activity>
     </application>
 
